feat(observability): 가상 스레드 pinning 관측 배선 (§3.3)
앱 코드 전 모듈 src/main 에 synchronized 0건 → pinning은 JDBC/Hikari 내부에서만
발생 가능하며 코드 완화(ReentrantLock) 대상이 없음. 대신 관측 가능성을 배선:
- build.gradle: bootRun 등 JavaExec 에 게이트된 jdk.tracePinnedThreads 진단 추가
  (-Ptrace-pinned=full 또는 TRACE_PINNED=full, 기본 off)
- load-test.yml: k6 부하 테스트 중 TRACE_PINNED=full 활성 + backend.log 캡처 +
  "Report Virtual Thread Pinning" 단계(감지 시 CI 경고) + backend.log 아티팩트 업로드

검증: gradle 설정 평가 정상(-Ptrace-pinned=full), load-test.yml YAML 유효.
문서: project-audit-report §3.3 🔴→🟡(관측 배선 완료, 튜닝은 부하 결과 대기), §6 로드맵 갱신.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>